--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,31 @@
 @import "tailwindcss";
 
-
+/* Define your font faces */
 @font-face {
-  font-family: 'Raleway';
-  src: url('./assets/fonts/Raleway-Regular.ttf');
+  font-family: 'Onest';
+  src: url('./assets/fonts/Onest-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Raleway';
-  src: url('./assets/fonts/Raleway-SemiBold.ttf') format('woff2');
-  font-weight: 700;
-  font-style: bold;
+  font-family: 'Onest';
+  src: url('./assets/fonts/Onest-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
   font-display: swap;
+}
+
+/* Extend Tailwind with custom fonts using CSS variables */
+@layer base {
+  :root {
+    --font-onest: 'Onest', sans-serif;
+  }
+}
+
+@layer utilities {
+  .font-onest {
+    font-family: var(--font-onest);
+  }
 }
