--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   color-scheme: light dark;
   color: rgba(0, 0, 0, 0.87);
-  background-color: #ffffff;
+  background-color: #252525;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
