Add sidebar component to global app

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   color-scheme: light dark;
   color: rgba(0, 0, 0, 0.87);
-  background-color: #252525;
+  background-color: #18181b;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
